# PS2Recomp

./: .gitignore  CMakeLists.txt  README.md  Readme.md  add_entry.py  analyze_jal_returns.py  auto_fix_entries.py  extract_symbols.py  fix_delay_slot_splits.py  fix_missing_entries.sh  inject.py  iterate_fixes.py  sly1_config.toml  sly1_functions.json  sly1_functions_fixed.json  split_recompiled.py
android/: README.md  (+2 more)
ps2xAnalyzer/: CMakeLists.txt  Readme.md
ps2xAnalyzer/include/ps2recomp/: analysis_passes.h  elf_analysis_context.h  elf_analyzer.h  function_classifier.h  sce_symbol_scanner.h  toml_generator.h
ps2xAnalyzer/src/: analysis_passes.cpp  analyzer_main.cpp  elf_analysis_context.cpp  elf_analyzer.cpp  function_classifier.cpp  sce_symbol_scanner.cpp  toml_generator.cpp
ps2xIOP/: CMakeLists.txt  PluginExample.md  README.md
ps2xIOP/include/ps2x/iop/: iop_host.h  iop_subsystem.h  iop_types.h  plugin_api.h
ps2xIOP/src/: builtin_profiles.cpp  iop_service.h  iop_subsystem.cpp  module_factories.h  plugin_loader.cpp  plugin_loader.h
ps2xIOP/src/modules/: clfile.cpp  cri_dtx.cpp  dbcman.cpp  libsd.cpp  mcserv.cpp  sdrdrv.cpp  sound_update_stub.cpp  tsnddrv.cpp
ps2xRecomp/: CMakeLists.txt  example_config.toml
ps2xRecomp/docs/: midasm_hooks.md
ps2xRecomp/include/ps2recomp/: code_generator.h  codegen_helpers.h  config_manager.h  control_flow_analyzer.h  control_flow_emitter.h  control_flow_utils.h  decoder.h  elf_parser.h  gif_dma_kick_analyzer.h  instructions.h  ps2_recompiler.h  r5900_decoder.h  recompiler_reporter.h  types.h
ps2xRecomp/include/ps2recomp/Emitters/: control_flow_emitter.h  function_emitter.h  function_table_emitter.h
ps2xRecomp/include/ps2recomp/Translators/: cop0_translator.h  fpu_translator.h  instruction_translator.h  mmi_translator.h  regimm_translator.h  special_translator.h  vu_translator.h
ps2xRecomp/src/: code_generator.cpp  config_manager.cpp  decoder.cpp  elf_parser.cpp  main.cpp  ps2_recompiler.cpp  r5900_decoder.cpp
ps2xRecomp/src/lib/: code_generator.cpp  config_manager.cpp  control_flow_analyzer.cpp  control_flow_emitter.cpp  cop0_translator.cpp  elf_parser.cpp  fpu_translator.cpp  function_emitter.cpp  function_table_emitter.cpp  gif_dma_kick_analyzer.cpp  instruction_translator.cpp  jump_table_switch_emitter.cpp  mmi_translation_helpers.cpp  mmi_translator.cpp  ps2_recompiler.cpp  r5900_decoder.cpp  recompiler_reporter.cpp  regimm_translator.cpp  special_translator.cpp  vu_translation_helpers.cpp  vu_translator.cpp
ps2xRecomp/src/runner/: main.cpp
ps2xRecomp/tools/ghidra/: DecompileTargets.java  ExportPS2Functions.java  ExportPS2Functions.py
ps2xRuntime/: CMakeLists.txt  Readme.md  main_example.cpp
ps2xRuntime/build_msvc/: CMakeCache.txt
ps2xRuntime/cmake/: CopyFfmpegDlls.cmake  ReleaseMode.cmake
ps2xRuntime/include/: game_overrides.h  games_database.h  ps2_audio.h  ps2_call_list.h  ps2_debug_panel.h  ps2_dispatch_history.h  ps2_gif_arbiter.h  ps2_gs_common.h  ps2_gs_gpu.h  ps2_gs_psmt4.h  ps2_gs_psmt8.h  ps2_gs_rasterizer.h  ps2_iop.h  ps2_iop_audio.h  ps2_log.h  ps2_memory.h  ps2_recompiled_stubs.h  ps2_runtime.h  ps2_runtime_calls.h  ps2_runtime_macros.h  ps2_scheduler.h  ps2_stubs.h  ps2_syscall_override_state.h  ps2_syscalls.h  ps2_vu1.h  register_functions.h  types.h
ps2xRuntime/include/runtime/: present_layout.h  ps2_address.h  ps2_audio.h  ps2_diag.h  ps2_gif_arbiter.h  ps2_gs_common.h  ps2_gs_gpr.h  ps2_gs_gpu.h  ps2_gs_memory.h  ps2_gs_psmct16.h  ps2_gs_psmct32.h  ps2_gs_psmt4.h  ps2_gs_psmt8.h  ps2_gs_rasterizer.h  ps2_guestwatch.h  ps2_iop.h  ps2_iop_audio.h  ps2_iop_cl.h  ps2_iop_cpu.h  ps2_iop_dbcman.h  ps2_iop_kernel.h  ps2_iop_loader.h  ps2_iop_memorycard.h  ps2_iop_sdrdrv.h  ps2_memory.h  ps2_pad.h  ps2_vu1.h
ps2xRuntime/output/: ps2_runtime_macros.h
ps2xRuntime/src/: main.cpp  ps2_memory.cpp  ps2_runtime.cpp  ps2_stubs.cpp  ps2_syscalls.cpp
ps2xRuntime/src/lib/: game_overrides.cpp  games_database.cpp  ps2_android_runtime.cpp  ps2_audio.cpp  ps2_audio_vag.cpp  ps2_debug_panel.cpp  ps2_fiber.cpp  ps2_fiber.h  ps2_gif_arbiter.cpp  ps2_gs_gpu.cpp  ps2_gs_memory.cpp  ps2_gs_rasterizer.cpp  ps2_iop.cpp  ps2_iop_audio.cpp  ps2_iop_cl.cpp  ps2_iop_cpu.cpp  ps2_iop_dbcman.cpp  ps2_iop_host.cpp  ps2_iop_host.h  ps2_iop_kernel.cpp  ps2_iop_loader.cpp  ps2_iop_memorycard.cpp  ps2_iop_sdrdrv.cpp  ps2_iop_transport.h  ps2_memory.cpp  ps2_pad.cpp  ps2_runtime.cpp  ps2_scheduler.cpp  ps2_scheduler_internal.h  ps2_stubs.cpp  ps2_syscalls.cpp  ps2_syscalls.cpp.bak  ps2_vif1_interpreter.cpp  ps2_vita_runtime.cpp  ps2_vu1.cpp
ps2xRuntime/src/lib/stubs/: ps2_stubs_gs.inl  ps2_stubs_libc.inl  ps2_stubs_misc.inl  ps2_stubs_ps2.inl  ps2_stubs_residentEvilCV.inl
ps2xRuntime/src/runner/: FUN_00166e98_0x166e98.cpp  FUN_00167188_0x167188.cpp  FUN_0016739c_0x16739c.cpp  FUN_00167aa8_0x167aa8.cpp  FUN_0018c018_0x18c018.cpp  FUN_00194f30_0x194f30.cpp  FUN_001d09d8_0x1d09d8.cpp  FUN_001d3730_0x1d3730.cpp  entry_0x100134.cpp  games_database.cpp  main.cpp  register_functions.cpp  sub_001655E0_0x1655e0.cpp  sub_001C26E8_0x1c26e8.cpp
ps2xStudio/: CMakeLists.txt  README.md
ps2xStudio/include/: GUI.hpp  StudioState.hpp
ps2xStudio/include/ui/: StyleManager.hpp
ps2xStudio/src/: GUI.cpp  main.cpp
ps2xStudio/src/ui/: StyleManager.cpp
ps2xTest/: CMakeLists.txt  tsan.supp
ps2xTest/include/: MiniTest.h  SchedTestSupport.h
ps2xTest/src/: code_generator_tests.cpp  decoder_tests.cpp  elf_analyzer_tests.cpp  fake_iop_bad_abi.c  fake_iop_missing_symbol.cpp  fake_iop_plugin.cpp  main.cpp  mpeg_pacing_fixture_m2v.h  pad_input_tests.cpp  present_layout_tests.cpp  ps2_gs_tests.cpp  ps2_iop_tests.cpp  ps2_memory_tests.cpp  ps2_mpeg_pacing_tests.cpp  ps2_observability_tests.cpp  ps2_recompiler_tests.cpp  ps2_runtime_expansion_tests.cpp  ps2_runtime_interrupt_tests.cpp  ps2_runtime_io_tests.cpp  ps2_runtime_kernel_tests.cpp  ps2_scheduler_workload_regression_tests.cpp  ps2_sif_dma_tests.cpp  ps2_sif_rpc_tests.cpp  ps2_vu1_tests.cpp  ps2_vu_tests.cpp  r5900_decoder_tests.cpp  runtime_syscall_tests.cpp  test_function_table.cpp
(+107 files in other folders)
